/*
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 */

syntax = "proto2";
package org.apache.servicecomb.transport.highway.message;
option java_package = "org.apache.servicecomb.transport.highway.message";

message ResponseHeader {
  optional int32 flags = 1;
  optional int32 statusCode = 2;
  optional string reasonPhrase = 3;
  map<string,string> context = 4;
  optional Headers headers = 5;
}

message Headers {
  map<string,ListGoogle_protobuf_Any> headerMap = 1;
}

//@WrapProperty
message ListGoogle_protobuf_Any {
  repeated string type_url = 1;
  repeated bytes value = 2;
}